# LAMMP

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.c  main.cpp
benchmark/lammp/: CMakeLists.txt  main.cpp
benchmark/lammp/include/: benchmark.hpp
benchmark/lammp/src/: bench_add.cpp  bench_div.cpp  bench_div_128.cpp  bench_factorial.cpp  bench_gcd2.cpp  bench_hash.cpp  bench_mul.cpp  bench_mul_unbal.cpp  bench_pow_basecase.cpp  bench_pow_win2.cpp  bench_powmod_ulong.cpp  bench_sub.cpp  ger_random_number.cpp
doc/lammp/dev/: mulcase.md
docs/lammp/dev/: mulcase.md
example/lammp/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp
include/lammp/: alloc.h  base_cal.hpp  ccstdlib.h  intdef.h  lampz.h  lmmp.h  lmmpn.h  matrix.h  mprand.h  numth.h  secret.h  u128_u192_macro.h  version.h
include/lammp/impl/: 3ntt_crt_const.h  3ntt_crt_kernel.h  _umul64to128_.h  base_table.h  char_prime.h  default_stack.h  divexact.h  ele_mul.h  factors_mul.h  heap.h  inlines.h  is_prime_table.h  lglg.h  log2_exp2.h  longlong.h  mat22_mul.h  mparam.h  mpdef.h  prime_table.h  print_hex.h  rand_state.h  safe_memory.h  signed.h  tmp_alloc.h  toom_interp.h  u128_u192.h
src/lammp/: CMakeLists.txt  LammpCore.def  abort.c  add_n_sub_n.c  base_table.c  bninv.c  div.c  div_basecase.c  div_divide.c  div_mulinv.c  extract_bits.c  from_str.c  generic_c.c  inv.c  memory.c  mul.c  mul_3ntt_crt.c  mul_fft.c  mul_toom22.c  mul_toom32.c  mul_toom33.c  mul_toom42.c  mul_toom43.c  mul_toom44.c  mul_toom52.c  mul_toom53.c  mul_toom62.c  mul_toom_eval.c  mul_toom_interp5.c  mul_toom_interp6.c  mul_toom_interp7.c  mullo.c  panic.c  sqr.c  sqr_toom2.c  sqr_toom3.c  sqr_toom4.c  sqrt.c  to_str.c
src/lammp/NumTh/: arith_seqprod.c  bino_coeff.c  binvert.c  binvert_1.c  cbrt.c  cbrt_1.c  divexact.c  ele_mul.c  factorial.c  factorial_extra.c  gcd_1.c  gcd_2.c  gcd_basecase.c  gcd_lehmer.c  heap.c  hgcd.c  is_prime_ulong.c  mat22_mul.c  multinomial.c  nCr.c  nPr.c  n_binvert.c  nthroot.c  permu_num.c  pow.c  pow_1.c  pow_basecase.c  pow_win2.c  pow_win3.c  prime_int.c  prime_short.c  remove.c  trialdiv.c
src/lammp/alloc/: alloc.c
src/lammp/asm/: lammp_asm.def
src/lammp/asm/x64/: add_n_c.asm  addmul_1.asm  addshl1_n.asm  div_1.asm  div_2.asm  div_3_2.asm  inv_1.asm  mod_1.asm  mod_2.asm  mul_1.asm  mul_basecase.asm  not.asm  shl.asm  shlnot.asm  shr.asm  shr1add_n_c.asm  shr1sub_n_c.asm  sqr_basecase.asm  sub_n_c.asm  submul_1.asm  subshl1_n.asm  tiny.asm
src/lammp/base_cal/: u128.inl
src/lammp/generic/: add_n.c  div.c  inv.c  mul_1.c  mul_basecase.c  not.c  shl.c  shr.c  sub_n.c  tiny.c
src/lammp/global/: 3ntt_crt_const.c  base_table.c  lglg.c  log2_exp2.c  prime_char.c  prime_table.c
src/lammp/lampz/: add_sub.cpp  div.cpp  init.cpp  mul.cpp  pow.cpp  str.cpp
src/lammp/lmmp/: abort.c  memory.c  version.c
src/lammp/lmmpn/: add_n_sub_n.c  bninv.c  div.c  div_basecase.c  div_divide.c  div_mulinv.c  extract_bits.c  from_str.c  inv.c  mul.c  mul_fft.c  mul_toom22.c  mul_toom32.c  mul_toom33.c  mul_toom42.c  mul_toom43.c  mul_toom44.c  mul_toom52.c  mul_toom53.c  mul_toom62.c  mul_toom_eval.c  mul_toom_interp5.c  mul_toom_interp6.c  mul_toom_interp7.c  mullo.c  sqr_toom2.c  sqr_toom3.c  sqr_toom4.c  sqrt.c  to_str.c
src/lammp/lmmpn/asm/x64/: add_n_c.asm  addmul_1.asm  addshl1_n.asm  div_1.asm  div_2.asm  div_3_2.asm  inv_1.asm  mod_1.asm  mod_2.asm  mul_1.asm  mul_basecase.asm  not.asm  shl.asm  shlnot.asm  shr.asm  shr1add_n_c.asm  shr1sub_n_c.asm  sqr_basecase.asm  sub_n_c.asm  submul_1.asm  subshl1_n.asm  tiny.asm
src/lammp/lmmpn/generic/: add_n.c  div.c  inv.c  mul_1.c  mul_basecase.c  not.c  shl.c  shr.c  sub_n.c  tiny.c
src/lammp/masm/: add_n_c.asm  addmul_1.asm  addshl1_n.asm  aors_n_c  aorsmul_1  aorsshl1_n  asm_linux  asm_windows  div_1  div_1.asm  div_2  div_2.asm  div_3_2.asm  inv_1.asm  mul_1.asm  mul_basecase.asm  not.asm  shl.asm  shlnot.asm  shr.asm  shr1add_n_c.asm  shr1aors_n_c  shr1sub_n_c.asm  sqr_basecase.asm  sub_n_c.asm  submul_1.asm  subshl1_n.asm  tiny.asm
src/lammp/matrix/: elem_mul.c  mat22_mul.c  mat22_mul_vec2.c
src/lammp/mprand/: mprand.c  pcg64_128.c  xorshift256.c
src/lammp/numth/: arith_seqprod.c  binvert_1.c  divexact.c  ele_mul.c  factorial.c  factorial_extra.c  gcd_1.c  gcd_basecase.c  is_prime_ulong.c  multinomial.c  nCr.c  nPr.c  nthroot_1.c  perfsqr.c  perfsqrt.c  pow.c  pow_win2.c  remove.c  trialdiv.c
src/lammp/secret/: siphash.c  xxhash.c
test/lammp/: CMakeLists.txt  main.cpp
test/lammp/include/: test_long.hpp  test_short.hpp
test/lammp/src/: test_add_nc_.cpp  test_arith_seqprod.cpp  test_bino.cpp  test_binvert.cpp  test_bninv.cpp  test_div.cpp  test_divexact.cpp  test_factorial.cpp  test_factorial_extra.cpp  test_gcd.cpp  test_gcd2.cpp  test_hash.cpp  test_isprime_ulong.cpp  test_matrix.cpp  test_mod.cpp  test_mullo.cpp  test_multinomial.cpp  test_perm.cpp  test_pow.cpp  test_powmod.cpp  test_pri_int.cpp  test_pri_short.cpp  test_rand.cpp  test_random.cpp  test_remove.cpp  test_sqrt.cpp  test_trialdiv.cpp  test_umul64to128.cpp  test_vec_ele_mul.cpp
